# openstack-helm-images

./: .dockerignore  .gitignore  .gitreview  CONTRIBUTING.rst  Makefile  README.md  README.rst  README_MAKEFILE  bindep.txt  pydep.txt  setup.cfg  tox.ini
alerta/: Dockerfile  Makefile  alertad.conf  build.sh  install-plugins.sh  plugins.txt  requirements.txt  supervisord.conf
barbican/: Dockerfile
base/: Dockerfile
blazar/: Dockerfile
calicoctl-utility/: Dockerfile.alpine  build.sh
ceilometer/: Dockerfile
ceph-cephfs-provisioner/: Dockerfile.ubuntu_bionic  Dockerfile.ubuntu_focal  Dockerfile.ubuntu_jammy  Dockerfile.ubuntu_xenial  build.sh
ceph-config-helper/: Dockerfile.suse_15  Dockerfile.ubuntu  Dockerfile.ubuntu_bionic  Dockerfile.ubuntu_focal  Dockerfile.ubuntu_jammy  Dockerfile.ubuntu_xenial  build.sh
ceph-daemon/: Dockerfile.ubuntu  Dockerfile.ubuntu_bionic  Dockerfile.ubuntu_focal  Dockerfile.ubuntu_jammy  Dockerfile.ubuntu_xenial  build.sh
ceph-rbd-provisioner/: Dockerfile.ubuntu_bionic  Dockerfile.ubuntu_focal  Dockerfile.ubuntu_jammy  Dockerfile.ubuntu_xenial  build.sh
ceph-utility/: Dockerfile.ubuntu  Dockerfile.ubuntu_bionic  Dockerfile.ubuntu_focal  Dockerfile.ubuntu_jammy  Dockerfile.ubuntu_xenial  build.sh
cinder/: Dockerfile
cloudkitty/: Dockerfile
cyborg/: Dockerfile
designate/: Dockerfile
doc/: requirements.txt
elasticsearch-s3/: Dockerfile.5_6_4  Dockerfile.7  Dockerfile.7_11_2  Dockerfile.7_1_0  Dockerfile.7_6_2  Dockerfile.8  Dockerfile.8_7_1  Dockerfile.8_9_0  build.sh
fluentd/: Dockerfile.debian  build.sh
freezer/: Dockerfile
freezer-api/: Dockerfile
gate-utils/: Dockerfile.debian  Dockerfile.suse_15  Dockerfile.ubuntu_focal  build.sh
glance/: Dockerfile
heat/: Dockerfile
horizon/: Dockerfile
ironic/: Dockerfile
keystone/: Dockerfile
libvirt/: Dockerfile  build.sh  (+10 more)
(+297 files in other folders)
